--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
+ 
 <head>
-  <meta charset="utf-8">
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <title>DataStructuresNg</title>
-  <base href="/">
+  <base href="/"><script src="https://d3js.org/d3.v4.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
